src/snapshots/glass__codegen_tests__multi_function.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_mul takes integer a, integer b returns integer
    return (a * b)
endfunction

function glass_add takes integer a, integer b returns integer
    return (a + b)
endfunction

function glass_combined takes integer x returns integer
    return glass_add(x, glass_mul(x, 2))
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_mul(a, b)
    return (a * b)
end

function glass_add(a, b)
    return (a + b)
end

function glass_combined(x)
    return glass_add(x, glass_mul(x, 2))
end
