src/snapshots/glass__codegen_tests__rawcode.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_footman takes nothing returns integer
    return 'hfoo'
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_footman()
    return FourCC("hfoo")
end
