src/snapshots/glass__codegen_tests__record_update.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type Model
    integer array glass_Model_Model_wave
    integer array glass_Model_Model_score
    integer array glass_Model_free
    integer glass_Model_free_top = 0
    integer glass_Model_count = 0
endglobals

function glass_Model_alloc takes nothing returns integer
    local integer id
    if glass_Model_free_top > 0 then
        set glass_Model_free_top = glass_Model_free_top - 1
        set id = glass_Model_free[glass_Model_free_top]
    else
        set glass_Model_count = glass_Model_count + 1
        set id = glass_Model_count
    endif
    return id
endfunction

function glass_Model_dealloc takes integer id returns nothing
    set glass_Model_free[glass_Model_free_top] = id
    set glass_Model_free_top = glass_Model_free_top + 1
endfunction

function glass_new_Model takes integer p_wave, integer p_score returns integer
    local integer id = glass_Model_alloc()
    set glass_Model_Model_wave [id] = p_wave
    set glass_Model_Model_score [id] = p_score
    return id
endfunction

function glass_get_Model_Model_wave takes integer id returns integer
    return glass_Model_Model_wave [id]
endfunction

function glass_get_Model_Model_score takes integer id returns integer
    return glass_Model_Model_score [id]
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_bump takes integer m returns integer
    local integer glass_tmp_0
    set glass_tmp_0 = glass_Model_alloc()
    set glass_Model_Model_wave [glass_tmp_0] = 5
    set glass_Model_Model_score [glass_tmp_0] = glass_Model_Model_score [m]
    return glass_tmp_0
endfunction


function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_bump(m)
    local __base_1 = m
    return {wave = 5, score = __base_1.score}
end
