src/snapshots/glass__codegen_tests__record_update_handle_fields.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type HookData
    real array glass_HookData_HookData_tip_x
    real array glass_HookData_HookData_tip_y
    unit array glass_HookData_HookData_owner
    integer array glass_HookData_HookData_target
    integer array glass_HookData_HookData_count
    integer array glass_HookData_free
    integer glass_HookData_free_top = 0
    integer glass_HookData_count = 0
endglobals

function glass_HookData_alloc takes nothing returns integer
    local integer id
    if glass_HookData_free_top > 0 then
        set glass_HookData_free_top = glass_HookData_free_top - 1
        set id = glass_HookData_free[glass_HookData_free_top]
    else
        set glass_HookData_count = glass_HookData_count + 1
        set id = glass_HookData_count
    endif
    return id
endfunction

function glass_HookData_dealloc takes integer id returns nothing
    set glass_HookData_HookData_owner [id] = null
    set glass_HookData_free[glass_HookData_free_top] = id
    set glass_HookData_free_top = glass_HookData_free_top + 1
endfunction

function glass_new_HookData_HookData takes real p_tip_x, real p_tip_y, unit p_owner, integer p_target, integer p_count returns integer
    local integer id = glass_HookData_alloc()
    set glass_HookData_HookData_tip_x [id] = p_tip_x
    set glass_HookData_HookData_tip_y [id] = p_tip_y
    set glass_HookData_HookData_owner [id] = p_owner
    set glass_HookData_HookData_target [id] = p_target
    set glass_HookData_HookData_count [id] = p_count
    return id
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_update_tip takes integer h, real x, real y returns integer
    local integer glass_tmp_0
    set glass_tmp_0 = glass_HookData_alloc()
    set glass_HookData_HookData_tip_x [glass_tmp_0] = x
    set glass_HookData_HookData_tip_y [glass_tmp_0] = y
    set glass_HookData_HookData_owner [glass_tmp_0] = glass_HookData_HookData_owner [h]
    set glass_HookData_HookData_target [glass_tmp_0] = glass_HookData_HookData_target [h]
    set glass_HookData_HookData_count [glass_tmp_0] = glass_HookData_HookData_count [h]
    return glass_tmp_0
endfunction


function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_update_tip(h, x, y)
    local __base_1 = h
    return {tip_x = x, tip_y = y, owner = __base_1.owner, target = __base_1.target, count = __base_1.count}
end
