src/snapshots/glass__codegen_tests__string_concat.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_greet takes string name returns string
    return ("Hello " + name)
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_greet(name)
    return ("Hello " .. name)
end
